rnsc/test_data/rns_integration/error/parser/class_body/err_before_dot_class_recovers.rns
.method shouldn't be here
.class 42
.super java/lang/Object
unexpected
